[package]
name = "portscanner"
version = "1.0.0"
authors = ["Shay Hahiashvili <shayhha@gmail.com>"]
edition = "2024"
license = "MIT"
description = "High-performance async port scanner supporting UDP, TCP, SYN, NULL, FIN, XMAS and ACK scans."
repository = "https://github.com/Shayhha/PortScanner"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
pnet = "0.35.0"
netdev = "0.40.0"
rand = "0.9"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3