[package]
name = "default_gateway"
version = "1.0.0"
authors = ["Shay Hahiashvili <shayhha@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Cross-platform utility for retrieving the default gateway IP addresses of a network interface."
repository = "https://github.com/Shayhha/PortScanner"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.8"
netlink-packet-route = "0.28"
netlink-sys = "0.8"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2-system-configuration = { version = "0.3", features = ["SCNetworkConfiguration"] }
objc2-core-foundation = "0.3"
plist = "1.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
] }